1.19.3 sources